[gd_scene load_steps=21 format=3 uid="uid://dyfh666gya5x7"]

[ext_resource type="PackedScene" uid="uid://cqmvcq8hwe083" path="res://assets/scenes/stages/level_template.tscn" id="1_4dxyb"]
[ext_resource type="Shader" path="res://assets/scenes/stages/level_template.gdshader" id="2_b1i0t"]
[ext_resource type="Script" path="res://assets/scenes/stages/level_template.gd" id="2_wxvvf"]
[ext_resource type="Texture2D" uid="uid://c2ty0hx0f1q1s" path="res://assets/graphics/arcadefloor.png" id="3_esv0b"]
[ext_resource type="Texture2D" uid="uid://lfbuwpvkau1x" path="res://assets/graphics/chucklephotos.png" id="6_t78fe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ooq75"]
resource_local_to_scene = true
shader = ExtResource("2_b1i0t")
shader_parameter/C1 = Color(0.4, 0.47451, 0.701961, 1)
shader_parameter/C2 = Color(0.290196, 0.34902, 0.509804, 1)
shader_parameter/C3 = Color(0.164706, 0.196078, 0.290196, 1)
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_007cm"]
resource_local_to_scene = true
shader = ExtResource("2_b1i0t")
shader_parameter/C1 = Color(0.0666667, 1, 0, 1)
shader_parameter/C2 = Color(0, 0.278431, 0, 1)
shader_parameter/C3 = Color(0, 0, 0, 1)
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_evcw2"]
resource_local_to_scene = true
shader = ExtResource("2_b1i0t")
shader_parameter/C1 = Color(1, 0.501961, 0.67451, 1)
shader_parameter/C2 = Color(0.4, 0, 0.12549, 1)
shader_parameter/C3 = Color(0, 0, 0, 1)
shader_parameter/alpha = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tr6p1"]
atlas = ExtResource("6_t78fe")
region = Rect2(0, 0, 384, 332)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wsqf"]
atlas = ExtResource("6_t78fe")
region = Rect2(384, 0, 384, 332)

[sub_resource type="SpriteFrames" id="SpriteFrames_1u42b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr6p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wsqf")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vok71"]
atlas = ExtResource("6_t78fe")
region = Rect2(768, 0, 384, 332)

[sub_resource type="AtlasTexture" id="AtlasTexture_svigb"]
atlas = ExtResource("6_t78fe")
region = Rect2(1152, 0, 384, 332)

[sub_resource type="SpriteFrames" id="SpriteFrames_wh4dg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vok71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svigb")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_l8iww"]
atlas = ExtResource("6_t78fe")
region = Rect2(1536, 0, 384, 332)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj76q"]
atlas = ExtResource("6_t78fe")
region = Rect2(1920, 0, 384, 332)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ngnr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8iww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj76q")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_d24id"]
atlas = ExtResource("6_t78fe")
region = Rect2(2304, 0, 384, 332)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp4om"]
atlas = ExtResource("6_t78fe")
region = Rect2(2688, 0, 384, 332)

[sub_resource type="SpriteFrames" id="SpriteFrames_yupi8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d24id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp4om")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[node name="Stage3-15" instance=ExtResource("1_4dxyb")]
script = ExtResource("2_wxvvf")
level_name = "3-15: Come Again Soon!"
scene_ID = "stage3-15"
music_choice = "bgmLvl3"
stage_color = Color(0.909804, 0.72549, 0.733333, 1)
progress_destination = "onto4"

[node name="Sprite2D9" type="Sprite2D" parent="." index="0"]
z_index = -1
position = Vector2(320, 320)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Sprite2D10" type="Sprite2D" parent="." index="1"]
z_index = -1
position = Vector2(448, 320)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Sprite2D11" type="Sprite2D" parent="." index="2"]
z_index = -1
position = Vector2(576, 320)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Sprite2D12" type="Sprite2D" parent="." index="3"]
z_index = -1
position = Vector2(704, 320)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Sprite2D13" type="Sprite2D" parent="." index="4"]
z_index = -1
position = Vector2(320, 448)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Sprite2D14" type="Sprite2D" parent="." index="5"]
z_index = -1
position = Vector2(448, 448)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Sprite2D15" type="Sprite2D" parent="." index="6"]
z_index = -1
position = Vector2(576, 448)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Sprite2D16" type="Sprite2D" parent="." index="7"]
z_index = -1
position = Vector2(704, 448)
scale = Vector2(0.542373, 0.542373)
texture = ExtResource("3_esv0b")

[node name="Tiles1" parent="." index="8"]
material = SubResource("ShaderMaterial_ooq75")
layer_0/tile_data = PackedInt32Array(2097168, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2097197, 0, 0, 2097198, 0, 0, 2097199, 0, 0, 2031631, 0, 0, 1966095, 0, 0, 1900559, 0, 0, 1835023, 0, 0, 1769487, 0, 0, 1703951, 0, 0, 1638415, 0, 0, 1572879, 0, 0, 1507343, 0, 0, 1441807, 0, 0, 1376271, 0, 0, 1310735, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, 48, 0, 0, 65584, 0, 0, 131120, 0, 0, 196656, 0, 0, 262192, 0, 0, 327728, 0, 0, 393264, 0, 0, 458800, 0, 0, 524336, 0, 0, 589872, 0, 0, 655408, 0, 0, 720944, 0, 0, 786480, 0, 0, 852016, 0, 0, 917552, 0, 0, 983088, 0, 0, 1048624, 0, 0, 1114160, 0, 0, 1179696, 0, 0, 1245232, 0, 0, 1310768, 0, 0, 1376304, 0, 0, 1441840, 0, 0, 1507376, 0, 0, 1572912, 0, 0, 1638448, 0, 0, 1703984, 0, 0, 1769520, 0, 0, 1835056, 0, 0, 1900592, 0, 0, 1966128, 0, 0, 2031664, 0, 0, -65521, 0, 0, 2097167, 0, 0, 2097200, 0, 0, -65488, 0, 0, 196624, 0, 0, 458768, 0, 0, 720912, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 983079, 0, 0, 983080, 0, 0, 983081, 0, 0, 983082, 0, 0, 983083, 0, 0, 983084, 0, 0, 983085, 0, 0, 983086, 0, 0, 983087, 0, 0, 655389, 0, 0, 589853, 0, 0, 524317, 0, 0, 458781, 0, 0, 393245, 0, 0, 327709, 0, 0, 262173, 0, 0, 196637, 0, 0, 131101, 0, 0, 65565, 0, 0, 29, 0, 0, 28, 0, 0, 27, 0, 0, 26, 0, 0, 25, 0, 0, 24, 0, 0, 23, 0, 0, 22, 0, 0, 21, 0, 0, 20, 0, 0, 19, 0, 0, 18, 0, 0, 17, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 131089, 0, 0, 65553, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 196625, 0, 0, 262161, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 393233, 0, 0, 327697, 0, 0, 327698, 0, 0, 262162, 0, 0, 262163, 0, 0, 196627, 0, 0, 131091, 0, 0, 65555, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 327699, 0, 0, 393235, 0, 0, 393234, 0, 0, 458770, 0, 0, 458769, 0, 0, 524305, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 655377, 0, 0, 589841, 0, 0, 589842, 0, 0, 524306, 0, 0, 524307, 0, 0, 458771, 0, 0, 458772, 0, 0, 393236, 0, 0, 393237, 0, 0, 327701, 0, 0, 262165, 0, 0, 196629, 0, 0, 131093, 0, 0, 65557, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 458773, 0, 0, 524309, 0, 0, 524308, 0, 0, 589844, 0, 0, 589843, 0, 0, 655379, 0, 0, 655378, 0, 0, 720914, 0, 0, 720913, 0, 0, 786449, 0, 0, 786448, 0, 0, 851984, 0, 0, 917520, 0, 0, 917521, 0, 0, 851985, 0, 0, 851986, 0, 0, 786450, 0, 0, 786451, 0, 0, 720915, 0, 0, 720916, 0, 0, 655380, 0, 0, 655381, 0, 0, 589845, 0, 0, 589846, 0, 0, 524310, 0, 0, 524311, 0, 0, 458775, 0, 0, 393239, 0, 0, 327703, 0, 0, 262167, 0, 0, 196631, 0, 0, 131095, 0, 0, 65559, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 0, 0, 327704, 0, 0, 393240, 0, 0, 458776, 0, 0, 524312, 0, 0, 589848, 0, 0, 589847, 0, 0, 655383, 0, 0, 655382, 0, 0, 720918, 0, 0, 720917, 0, 0, 786453, 0, 0, 786452, 0, 0, 851988, 0, 0, 851987, 0, 0, 917523, 0, 0, 917522, 0, 0, 917524, 0, 0, 917525, 0, 0, 851989, 0, 0, 851990, 0, 0, 786454, 0, 0, 786455, 0, 0, 720919, 0, 0, 720920, 0, 0, 655384, 0, 0, 655385, 0, 0, 589849, 0, 0, 524313, 0, 0, 458777, 0, 0, 393241, 0, 0, 327705, 0, 0, 262169, 0, 0, 196633, 0, 0, 131097, 0, 0, 65561, 0, 0, 65562, 0, 0, 131098, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 0, 0, 720921, 0, 0, 786457, 0, 0, 786456, 0, 0, 851992, 0, 0, 851991, 0, 0, 917527, 0, 0, 917526, 0, 0, 917528, 0, 0, 917529, 0, 0, 851993, 0, 0, 851994, 0, 0, 786458, 0, 0, 786459, 0, 0, 720923, 0, 0, 655387, 0, 0, 589851, 0, 0, 524315, 0, 0, 458779, 0, 0, 393243, 0, 0, 327707, 0, 0, 262171, 0, 0, 196635, 0, 0, 131099, 0, 0, 65563, 0, 0, 65564, 0, 0, 131100, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 524316, 0, 0, 589852, 0, 0, 655388, 0, 0, 720924, 0, 0, 786460, 0, 0, 851996, 0, 0, 851995, 0, 0, 917531, 0, 0, 917530, 0, 0, 917532, 0, 0, 917533, 0, 0, 851997, 0, 0, 786461, 0, 0, 720925, 0, 0, 720926, 0, 0, 655390, 0, 0, 589854, 0, 0, 524318, 0, 0, 458782, 0, 0, 393246, 0, 0, 327710, 0, 0, 262174, 0, 0, 196638, 0, 0, 131102, 0, 0, 65566, 0, 0, 30, 0, 0, 31, 0, 0, 65567, 0, 0, 131103, 0, 0, 196639, 0, 0, 262175, 0, 0, 327711, 0, 0, 393247, 0, 0, 458783, 0, 0, 524319, 0, 0, 589855, 0, 0, 655391, 0, 0, 720927, 0, 0, 786463, 0, 0, 786462, 0, 0, 851998, 0, 0, 917534, 0, 0, 917535, 0, 0, 851999, 0, 0, 852000, 0, 0, 786464, 0, 0, 720928, 0, 0, 655392, 0, 0, 589856, 0, 0, 524320, 0, 0, 458784, 0, 0, 393248, 0, 0, 327712, 0, 0, 262176, 0, 0, 196640, 0, 0, 131104, 0, 0, 65568, 0, 0, 32, 0, 0, 33, 0, 0, 65569, 0, 0, 131105, 0, 0, 196641, 0, 0, 262177, 0, 0, 327713, 0, 0, 393249, 0, 0, 458785, 0, 0, 524321, 0, 0, 589857, 0, 0, 655393, 0, 0, 720929, 0, 0, 786465, 0, 0, 852001, 0, 0, 917537, 0, 0, 917536, 0, 0, 917538, 0, 0, 852002, 0, 0, 786466, 0, 0, 720930, 0, 0, 655394, 0, 0, 589858, 0, 0, 524322, 0, 0, 458786, 0, 0, 393250, 0, 0, 327714, 0, 0, 262178, 0, 0, 196642, 0, 0, 131106, 0, 0, 65570, 0, 0, 34, 0, 0, 35, 0, 0, 65571, 0, 0, 131107, 0, 0, 196643, 0, 0, 262179, 0, 0, 327715, 0, 0, 393251, 0, 0, 458787, 0, 0, 524323, 0, 0, 589859, 0, 0, 655395, 0, 0, 720931, 0, 0, 786467, 0, 0, 852003, 0, 0, 917539, 0, 0, 917540, 0, 0, 852004, 0, 0, 786468, 0, 0, 720932, 0, 0, 655396, 0, 0, 589860, 0, 0, 524324, 0, 0, 458788, 0, 0, 393252, 0, 0, 327716, 0, 0, 262180, 0, 0, 196644, 0, 0, 131108, 0, 0, 65572, 0, 0, 36, 0, 0, 37, 0, 0, 65573, 0, 0, 131109, 0, 0, 196645, 0, 0, 262181, 0, 0, 327717, 0, 0, 393253, 0, 0, 458789, 0, 0, 524325, 0, 0, 589861, 0, 0, 655397, 0, 0, 720933, 0, 0, 786469, 0, 0, 852005, 0, 0, 917541, 0, 0, 917542, 0, 0, 852006, 0, 0, 786470, 0, 0, 720934, 0, 0, 655398, 0, 0, 589862, 0, 0, 524326, 0, 0, 458790, 0, 0, 393254, 0, 0, 327718, 0, 0, 262182, 0, 0, 196646, 0, 0, 131110, 0, 0, 65574, 0, 0, 38, 0, 0, 39, 0, 0, 65575, 0, 0, 131111, 0, 0, 196647, 0, 0, 262183, 0, 0, 327719, 0, 0, 393255, 0, 0, 458791, 0, 0, 524327, 0, 0, 589863, 0, 0, 655399, 0, 0, 720935, 0, 0, 786471, 0, 0, 852007, 0, 0, 917543, 0, 0, 917544, 0, 0, 852008, 0, 0, 786472, 0, 0, 720936, 0, 0, 655400, 0, 0, 589864, 0, 0, 524328, 0, 0, 458792, 0, 0, 393256, 0, 0, 327720, 0, 0, 262184, 0, 0, 196648, 0, 0, 131112, 0, 0, 65576, 0, 0, 40, 0, 0, 41, 0, 0, 65577, 0, 0, 131113, 0, 0, 196649, 0, 0, 262185, 0, 0, 327721, 0, 0, 393257, 0, 0, 458793, 0, 0, 524329, 0, 0, 589865, 0, 0, 655401, 0, 0, 720937, 0, 0, 786473, 0, 0, 852009, 0, 0, 917545, 0, 0, 917546, 0, 0, 852010, 0, 0, 786474, 0, 0, 720938, 0, 0, 655402, 0, 0, 589866, 0, 0, 524330, 0, 0, 458794, 0, 0, 393258, 0, 0, 327722, 0, 0, 262186, 0, 0, 196650, 0, 0, 131114, 0, 0, 65578, 0, 0, 42, 0, 0, 43, 0, 0, 65579, 0, 0, 131115, 0, 0, 196651, 0, 0, 262187, 0, 0, 327723, 0, 0, 393259, 0, 0, 458795, 0, 0, 524331, 0, 0, 589867, 0, 0, 655403, 0, 0, 720939, 0, 0, 786475, 0, 0, 852011, 0, 0, 917547, 0, 0, 917548, 0, 0, 852012, 0, 0, 786476, 0, 0, 720940, 0, 0, 655404, 0, 0, 589868, 0, 0, 524332, 0, 0, 458796, 0, 0, 393260, 0, 0, 327724, 0, 0, 262188, 0, 0, 196652, 0, 0, 131116, 0, 0, 65580, 0, 0, 44, 0, 0, 45, 0, 0, 65581, 0, 0, 131117, 0, 0, 196653, 0, 0, 262189, 0, 0, 327725, 0, 0, 393261, 0, 0, 458797, 0, 0, 524333, 0, 0, 589869, 0, 0, 655405, 0, 0, 720941, 0, 0, 786477, 0, 0, 852013, 0, 0, 917549, 0, 0, 917550, 0, 0, 852014, 0, 0, 786478, 0, 0, 720942, 0, 0, 655406, 0, 0, 589870, 0, 0, 524334, 0, 0, 458798, 0, 0, 393262, 0, 0, 327726, 0, 0, 262190, 0, 0, 196654, 0, 0, 131118, 0, 0, 65582, 0, 0, 46, 0, 0, 47, 0, 0, 65583, 0, 0, 131119, 0, 0, 196655, 0, 0, 262191, 0, 0, 327727, 0, 0, 393263, 0, 0, 458799, 0, 0, 524335, 0, 0, 589871, 0, 0, 655407, 0, 0, 720943, 0, 0, 786479, 0, 0, 852015, 0, 0, 917551, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 2031659, 0, 0, 1966123, 0, 0, 1900587, 0, 0, 1835051, 0, 0, 1900586, 0, 0, 1966122, 0, 0, 2031658, 0, 0, 1835050, 0, 0, 1769514, 0, 0, 1703978, 0, 0, 1638442, 0, 0, 1638443, 0, 0, 1703979, 0, 0, 1769515, 0, 0, 1179690, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1179691, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1179684, 0, 0, 1245220, 0, 0, 1310756, 0, 0, 1376292, 0, 0, 1441828, 0, 0, 1507364, 0, 0, 1572900, 0, 0, 1638436, 0, 0, 1703972, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1703973, 0, 0, 1638437, 0, 0, 1572901, 0, 0, 1507365, 0, 0, 1441829, 0, 0, 1376293, 0, 0, 1310757, 0, 0, 1245221, 0, 0, 1179685, 0, 0, 2031647, 0, 0, 1966111, 0, 0, 1900575, 0, 0, 1835039, 0, 0, 1835038, 0, 0, 1900574, 0, 0, 1966110, 0, 0, 2031646, 0, 0, 1245214, 0, 0, 1310750, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1310751, 0, 0, 1245215, 0, 0, 1179679, 0, 0, 1179678, 0, 0, 1441823, 0, 0, 1507359, 0, 0, 1507358, 0, 0, 1441822, 0, 0, 2031640, 0, 0, 1966104, 0, 0, 1900568, 0, 0, 1835032, 0, 0, 1835033, 0, 0, 1900569, 0, 0, 1966105, 0, 0, 2031641, 0, 0, 1769497, 0, 0, 1703961, 0, 0, 1638425, 0, 0, 1638424, 0, 0, 1703960, 0, 0, 1769496, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1179672, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1179673, 0, 0, 1572887, 0, 0, 1638423, 0, 0, 1638422, 0, 0, 1638421, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572884, 0, 0, 1638420, 0, 0)

[node name="SwitchTiles1" parent="." index="10"]
material = SubResource("ShaderMaterial_007cm")

[node name="SwitchTiles2" parent="." index="11"]
material = SubResource("ShaderMaterial_evcw2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="12"]
position = Vector2(520, 72)
scale = Vector2(0.375, 0.337349)
sprite_frames = SubResource("SpriteFrames_1u42b")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="." index="13"]
position = Vector2(680, 72)
scale = Vector2(0.375, 0.337349)
sprite_frames = SubResource("SpriteFrames_wh4dg")
autoplay = "default"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="." index="14"]
position = Vector2(520, 200)
scale = Vector2(0.375, 0.337349)
sprite_frames = SubResource("SpriteFrames_5ngnr")
autoplay = "default"

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="." index="15"]
position = Vector2(680, 200)
scale = Vector2(0.375, 0.337349)
sprite_frames = SubResource("SpriteFrames_yupi8")
autoplay = "default"

[node name="GoalHole" parent="MainObjects" index="0"]
modulate = Color(0.427451, 0.466667, 1, 1)
position = Vector2(352, 448)

[node name="CatGolf" parent="MainObjects" index="1"]
modulate = Color(0.427451, 0.466667, 1, 1)
position = Vector2(736, 480)

[node name="HardModeGhost" parent="MainObjects/UncannyCats" index="0"]
modulate = Color(0.427451, 0.466667, 1, 1)
position = Vector2(352, 320)
